# gametvsu

./: CMakeLists.txt  Schema.cpp  Schema.h  main.cpp
entities/: BaseMonster.cpp  BaseMonster.h  IEntity.h  Monster1.cpp  Monster1.h  Monster2.cpp  Monster2.h  Monster3.cpp  Monster3.h  Player.cpp  Player.h
factory/: Monster1Factory.h  Monster2Factory.h  Monster3Factory.h  MonsterFactory.h  easyfactory.h  factoryinclude.h  hardfactory.h
items/: IItem.h  basearmour.cpp  basearmour.h  baseweapon.cpp  baseweapon.h
utils/: randomgen.h
